--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ input {
         flex-direction: column;
     }
     
-    .logo img {
+    .logo {
         height: auto;
         width: 150px;
     }
